[gd_scene load_steps=6 format=3 uid="uid://bcnwamcc1w56l"]

[ext_resource type="Script" uid="uid://17c2y0j4ybqa" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="Texture2D" uid="uid://dadx3rh1hrvpw" path="res://Assets/Mesa.png" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://cmrkkr24qaeva" path="res://Scenes/computer.tscn" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://dgj228606yesh" path="res://Scenes/personaje.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://dka3ks6dtqqg0" path="res://Scenes/facturas.tscn" id="4_jjvhh"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8gbba")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(968, 539)
zoom = Vector2(0.6, 0.6)

[node name="Personaje" parent="." instance=ExtResource("2_kry3j")]
position = Vector2(916, 565)

[node name="Mesa" type="Sprite2D" parent="."]
position = Vector2(968, 941)
texture = ExtResource("1_jjgbg")

[node name="computer" parent="." instance=ExtResource("2_bo1nx")]
position = Vector2(1560, 654)

[node name="Facturas" parent="." instance=ExtResource("4_jjvhh")]
position = Vector2(591, 583)

[connection signal="continuar" from="computer" to="." method="_on_computer_continuar"]
[connection signal="facturaA" from="computer" to="." method="_on_computer_factura_a"]
[connection signal="facturaB" from="computer" to="." method="_on_computer_factura_b"]
[connection signal="facturaC" from="computer" to="." method="_on_computer_factura_c"]
